# Analytics

./: .gitignore  causal_inference_tutorial.ipynb  pyproject.toml
Colab Notebook/learning_marketing/: ch3_EDA_by_plotly.ipynb
Colab Notebooks/learning_Marketing/: ch3_EDA_by_plotly.ipynb
Colab Notebooks/learning_causalML/: casualML_practice.ipynb
Colab Notebooks/learning_causal_inference/: causal_inference_tutorial.ipynb
Colab Notebooks/learning_forecasting/: forecasting_tutorial.ipynb
Colab Notebooks/learning_julia/: Untitled.ipynb
Colab Notebooks/learning_marketing/: ch3_EDA_by_plotly.ipynb  ch4_EDA_by_plotly.ipynb  ch5_segment.ipynb  ch6_statistical_testing.ipynb
Colab Notebooks/learning_numpy.jax/: README.md  jax_tutorial.ipynb  machine_learning.ipynb
Colab Notebooks/learning_pytorch/: .gitignore  introduction_to_Pytorch.ipynb
notebook/learning_causalnex/: tutorial_causalnex.ipynb
notebook/learning_doWhy/: hotel_booking.ipynb
notebook/learning_fbprophets/: fbprophets.ipynb
notebook/learning_forecasting/: dlm_tutorial.ipynb  forecasting_tutorial.ipynb
notebook/learning_interpretML/: interpretML.ipynb
notebook/learning_julia/: julia_practice.ipynb  julia_tutorial.ipynb
notebook/learning_julia/pluto/: sample.jl
notebook/learning_marketing/: ch5_segment.ipynb
notebook/learning_numpyro/: BayesianRegression.ipynb
notebook/learning_pytorch/: Linear Regression.ipynb  MultiLayerPerceptron.ipynb  TransferLearning.ipynb  Untitled  introduction_to_Pytorch.ipynb
pipeline/: .kedro.yml  README.md  setup.cfg
pipeline/src/: setup.py
(+4 files in other folders)
