[tool.poetry]
name = "analytics"
version = "0.1.0"
description = ""
authors = ["beeyan"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8"
numpy = "^1.19.1"
pandas = "^1.1.1"
causalml = "^0.8.0"
torch = "^1.6.0"
numpyro = "^0.3.0"
scikit-learn = "^0.23.2"
matplotlib = "^3.3.1"
seaborn = "^0.10.1"
xgboost = "^1.1.1"
lightgbm = "^2.3.1"
jax = "0.1.73"
shap = "^0.35.0"
interpret = "^0.2.1"
fbprophet = "^0.7.1"
pulp = "^2.3"
networkx = "^2.5"
statsmodels = "^0.12.0"
optuna = "^2.1.0"
torchvision = "^0.7.0"
kedro = "^0.16.5"
mlflow = "^1.11.0"
arch = "^4.15"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
jupyterlab = "^2.2.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
